File Upload - A confirmation dialog for removing the file appears outside the visible area of a survey Fixes #7509

--- a/packages/survey-creator-core/src/components/simulator.scss
+++ b/packages/survey-creator-core/src/components/simulator.scss
@@ -73,7 +73,8 @@
   width: 100%;
   height: 100%;
   position: relative;
-  .sv-popup {
+  
+  .sv-popup--modal-popup {
     width: 100%;
     height: 100%;
   }
